# UpdateLVGL

./: CMakeLists.txt  sdkconfig
components/bsp/: CMakeLists.txt  bsp_lcd.c
components/bsp/include/: bsp_board.h
components/lcd/: st7701.c
components/lvgl/: lv_conf.h
components/lvgl/porting/: lv_port_disp.c  lv_port_indev.c  lv_port_indev.h
main/: .cproject  CMakeLists.txt  main.c
main/image_lab/: bubble_big.c  bubble_small.c  drop.c  marker.c  pump_off.c  pump_on.c  ruler.c  scheme.c  time.c  valve.c  valve_off.c
main/lib/encoder/: encoder.c  encoder.h
main/lv_calendar/: calendar.c  calendar.h
main/lv_fonts/: Roboto_30.c
main/lv_pic_scheme/: Main_Screen.c  Main_Screen.h
main/lv_widgets/: base_obj.c  base_obj.h
