idf_component_register(
    SRCS 
        "main"
        "lv_fonts/Roboto_30"
        "lib/encoder/encoder"
        "image_lab/bubble_big"
        "image_lab/bubble_small"
        "image_lab/drop"
        "image_lab/marker"
        "image_lab/pump_off"
        "image_lab/pump_on"
        "image_lab/scheme"
        "image_lab/time"
        "image_lab/valve"
        "image_lab/valve_off"
        "image_lab/ruler"
        "lv_pic_scheme/Main_Screen"
   



    INCLUDE_DIRS "../components/bsp/include"
                

        )
